# binance_historical_data

./: .gitignore  pyproject.toml
src/binance_historical_data/: data_dumper.py  s3_writer.py
tests/: test_binance_historical_data.py
